--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,38 +1,40 @@
 security:
-    #  Cómo se guardan las contraseñas
+    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
-    #   Dónde están los usuarios (Base de Datos)
+    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
+        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
 
-    #  CORTAFUEGOS: 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
         main:
             lazy: true
             provider: app_user_provider
-
-             Login con formulario
+            
+            # Login con formulario (Fíjate que ahora tiene la almohadilla #)
             form_login:
-                login_path: app_login 
-                check_path: app_login 
-                enable_csrf: true      
-                default_target_path: app_home 
-
-            #  Logout
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+            
+            # Logout
             logout:
                 path: app_logout
                 target: app_login
 
-    #  CONTROL DE ACCESO
+            # activate different ways to authenticate
+            # https://symfony.com/doc/current/security.html#the-firewall
+
+    # Easy way to control access for large sections of your site
+    # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/home, roles: ROLE_USER }
